fix activityIndiator z-index on tab-bar

--- a/components/activity-indicator/style/index.less
+++ b/components/activity-indicator/style/index.less
@@ -6,7 +6,7 @@
 .@{activityIndicatorPrefixCls} {
   display: flex;
   align-items: center;
-  z-index: 999;
+  z-index: 99;
   &-spinner {
     display: inline-block;
     width: 40px;
